Assign book functionality

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -6,3 +6,6 @@ login.error=Username or password is incorrect. Please provide valid username or 
 message.book.not-found=Book with id %s was not found in the database
 message.book.not-found-or-deleted=Book with id %s was not found in the database or is deleted
 message.assignment.not-found=Assignment with id %s was not found in the database
+message.user-have-to-many-waiting-assignments=User with username: %s have 3 or more waiting assignments
+message.user-already-have-assignment=User with username: %s already have assignment for this book
+
