Fix: Book view page

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -4,4 +4,5 @@ registration.validation.email=Please provide a valid email.
 registration.validation.password=Password can not be empty.
 login.error=Username or password is incorrect. Please provide valid username or password
 message.book.not-found=Book with id %s was not found in the database
+message.book.not-found-or-deleted=Book with id %s was not found in the database or is deleted
 message.assignment.not-found=Assignment with id %s was not found in the database
