Added functionality to approve extend time request on BE

--- a/src/main/resources/messages.properties
+++ b/src/main/resources/messages.properties
@@ -8,4 +8,5 @@ message.book.not-found-or-deleted=Book with id %s was not found in the database 
 message.assignment.not-found=Assignment with id %s was not found in the database
 message.user-have-to-many-waiting-assignments=User with username: %s have 3 or more waiting assignments
 message.user-already-have-assignment=User with username: %s already have assignment for this book
+message.request.not-found=Time extend request with id %s was not found in the database
 
